Version next

Version 2011.03.21.22
* Make S4E more robust when dealing with incompatible extensions and missing UI elements.
* Properly handle location bar deconstruction when it is removed from the UI.
* Updated translations for: ro
* Update copyright dates.

Version 2011.03.16.22
Summary of changes:
* Rewrote preferences backed and UI
* Implemented link/status in the location bar, with controls to change its appearance
* Added support for the chrome-style status popup
* Advanced controls for changing the styles of the progress bars
* Updated translations for: da, fr, hu, it-IT, ja-JP, nl, pl, pt-BR, sv-SE, zh-CN, zh-TW (de still needs updates)
* Added translations for: ro

Version 2011.01.17.02.4
* Added locales fr, pl, pt-BR and updated various others

Version 2011.03.10.18b
* Fix some compatibility issues with 3rd party themes.
* Keep urlbar suggestion dropdown arrow visible.
* Add option to hide background/async/XHR network status.
* Implement a simple style editor for selecting progress colors and images.
* Fix toolbar progress settings.
* Add annotations to the status elements. #status4evar-status-text, #statusbar-display, and .urlbar-over-link-box will have a "type" attribute set to one of the following: link, network, network_xhr, status_chrome, status_content, status_content_default, or status_chrome_default.

Version 2011.03.06.15b
* Don't use min-width on location bar link/status text.
* Better integration with the content pop-up.
* Simplify link/status handling in pup-up.
* Fix default status disappearing when switching tabs.
* Add setting to control urlbar status color.
* Don't clear the urlbar status when loading a new page (on urlbar location change).
* Add settings for controlling the position of the urlbar status. When the status alignment is set to "Right", the slider controls the max length of the status text. When the alignment is set to "Fixed", the slider controls the fixed start position.

Version 2011.02.20.23b