@@ -1,3 +1,4 @@
+pref("status4evar.addonbar.borderStyle", false);
 pref("status4evar.addonbar.closeButton", false);
 pref("status4evar.addonbar.windowGripper", true);
 
